[package]
name = "lennox-s30"
version = "0.1.0"
edition = "2024"
description = "Rust client for Lennox S30/E30/M30 thermostats (LAN API)"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = "0.3"
wiremock = "0.6"
tempfile = "3"
